2007-07-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCcse.c (replaceAllSymBySym): renamed siaddr to isaddr,
	  (cseBBlock): remember aggr2ptr has been used
	* src/SDCCicode.c (operandSize): added function to handle aggr2ptr,
	  (geniCodeAssign): fixed bug 868103
	* src/SDCCicode.h: made operand.aggr2ptr 2 bits wide,
	  added operandSize prototype
	* src/mcs51/gen.c (aopOp): use operandSize to fix bug 868103,
	  (genDataPointerSet): use max of size of right and result,
	  (gencjne): added parameter useCarry for optimization,
	  (genCmpEq): use carry if appropriate,
	  (genXor): check if operand already in carry
	* support/regression/tests/bug-868103.c: enabled test

2007-07-12 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genNearPointerSet): fixed handling of literals

2007-07-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c (compareType): fixed bugs 1738367 and 1745717 with patch
	  from Robert Larice, thanks
	* support/regression/tests/bitopcse.c,
	* support/regression/tests/bitvars.c,
	* support/regression/tests/bug-908454.c: use <stdbool.h> for the bit types
	* support/regression/tests/bug-927659.c: enabled test for z80
	* support/regression/tests/bug1738367.c: added extra tests by Frieder
	* support/regression/tests/bug1745717.c: new, added
	* support/regression/tests/literalop.c,
	* support/regression/tests/nullstring.c: removed storage definitions that
	  are now in testfwk.h

2007-07-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/stdbool.h: do not define __bool_true_false_are_defined
	  and bool for targets that do not fully support it.
	* support/regression/tests/bug1546986.c,
	* support/regression/tests/bug1723128.c,
	* support/regression/tests/bug1734654.c,
	* support/regression/tests/bug1738367.c,
	* support/regression/tests/constantRange.c: only use bool if allowed

2007-07-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/peep.c (isCallerSaveFunc): fixed bug 1749275, thanks Robert